# AI-ML-Internship-Project

./: Assignment-2.ipynb  README.md  requirements.txt
cancer-detection/: .coderabbit.yaml  .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.slim  MANIFEST.in  README.md  SECURITY.md  environment-dev.yml  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements.txt  runtests.sh  setup.cfg  setup.py  versioneer.py
cancer-detection/.github/workflows/: blossom-ci.yml  build_docs.yml  chatops.yml  cicd_tests.yml  codeql-analysis.yml  conda.yml  cron-ngc-bundle.yml  cron.yml  docker.yml  integration.yml  pythonapp-gpu.yml  release.yml  setupapp.yml  weekly-preview.yml
cancer-detection/docs/: .readthedocs.yaml  requirements.txt
cancer-detection/docs/source/: applications.md  config_syntax.md  handlers.rst  index.rst  installation.md  losses.rst  metrics.rst  modules.md  transforms.rst  whatsnew.rst  whatsnew_0_6.md  whatsnew_0_8.md  whatsnew_0_9.md  whatsnew_1_0.md  whatsnew_1_1.md  whatsnew_1_2.md  whatsnew_1_5.md  whatsnew_1_5_1.md  whatsnew_1_5_2.md  whatsnew_1_6.md
cancer-detection/monai/: __init__.py  _version.py
cancer-detection/monai/apps/: utils.py
cancer-detection/monai/auto3dseg/: __init__.py  algo_gen.py  analyzer.py  utils.py
cancer-detection/monai/bundle/: config_parser.py  scripts.py  utils.py  workflows.py
cancer-detection/monai/config/: deviceconfig.py  type_definitions.py
cancer-detection/monai/csrc/: ext.cpp
cancer-detection/monai/data/: __init__.py  box_utils.py  dataset.py  decathlon_datalist.py  image_dataset.py  image_reader.py  image_writer.py  meta_obj.py  meta_tensor.py  test_time_augmentation.py  utils.py  wsi_reader.py
cancer-detection/monai/engines/: evaluator.py  trainer.py  utils.py
cancer-detection/monai/handlers/: __init__.py  calibration.py  stats_handler.py  tensorboard_handlers.py  utils.py
cancer-detection/monai/inferers/: inferer.py  merger.py  utils.py
cancer-detection/monai/losses/: __init__.py  adversarial_loss.py  aucm_loss.py  barlow_twins.py  cldice.py  deform.py  dice.py  ds_loss.py  focal_loss.py  hausdorff_loss.py  image_dissimilarity.py  mcc_loss.py  multi_scale.py  nacl_loss.py  perceptual.py  spatial_mask.py  spectral_loss.py  ssim_loss.py  sure_loss.py  tversky.py  unified_focal_loss.py
cancer-detection/monai/metrics/: __init__.py  absolute_volume_difference.py  active_learning_metrics.py  average_precision.py  calibration.py  confusion_matrix.py  cumulative_average.py  embedding_collapse.py  froc.py  generalized_dice.py  loss_metric.py  meandice.py  panoptic_quality.py  regression.py  rocauc.py  utils.py
cancer-detection/monai/networks/: trt_compiler.py  utils.py
cancer-detection/monai/optimizers/: lr_finder.py  lr_scheduler.py
cancer-detection/monai/transforms/: __init__.py  adaptors.py  compose.py  inverse.py  traits.py  transform.py  utils.py  utils_pytorch_numpy_unification.py
cancer-detection/monai/utils/: component_store.py  decorators.py  deprecate_utils.py  misc.py  module.py  profiling.py  state_cacher.py  tf32.py  type_conversion.py
cancer-detection/monai/visualize/: gradient_based.py  img2tensorboard.py  utils.py  visualizer.py
cancer-detection/tests/: runner.py  test_utils.py
cancer-detection/tests/apps/: test_auto3dseg.py  test_auto3dseg_bundlegen.py  test_download_and_extract.py  test_download_url_yandex.py
cancer-detection/tests/auto3dseg/: test_json_serialization.py
cancer-detection/tests/bundle/: test_bundle_download.py  test_config_item.py  test_config_parser.py
cancer-detection/tests/data/: test_box_utils.py  test_cachedataset.py  test_gdsdataset.py  test_init_reader.py  test_itk_writer.py  test_lmdbdataset.py  test_numpy_reader.py  test_persistentdataset.py  test_persistentdataset_dist.py  test_shuffle_buffer.py  test_smartcachedataset.py  test_video_datasets.py
cancer-detection/tests/engines/: test_gradient_accumulation.py
cancer-detection/tests/handlers/: test_handler_calibration_error.py  test_handler_regression_metrics.py  test_trt_compile.py
cancer-detection/tests/inferers/: test_controlnet_inferers.py  test_diffusion_inferer.py  test_latent_diffusion_inferer.py  test_sliding_window_inference.py  test_zarr_avg_merger.py
cancer-detection/tests/integration/: test_auto3dseg_ensemble.py  test_auto3dseg_hpo.py  test_integration_autorunner.py  test_integration_classification_2d.py  test_integration_gpu_customization.py  test_integration_lazy_samples.py  test_integration_nnunet_bundle.py  test_integration_nnunetv2_runner.py  test_integration_workers.py  test_loader_semaphore.py  test_reg_loss_integration.py  test_seg_loss_integration.py  test_testtimeaugmentation.py
cancer-detection/tests/losses/: test_aucm_loss.py  test_cldice_loss.py  test_dice_loss.py  test_ds_loss.py  test_focal_loss.py  test_generalized_dice_loss.py  test_generalized_wasserstein_dice_loss.py  test_hausdorff_loss.py  test_masked_dice_loss.py  test_mcc_loss.py  test_multi_scale.py  test_perceptual_loss.py  test_unified_focal_loss.py
cancer-detection/tests/metrics/: test_absolute_volume_difference.py  test_calibration_metric.py  test_compute_froc.py  test_compute_meandice.py  test_compute_multiscalessim_metric.py  test_compute_panoptic_quality.py  test_compute_regression_metrics.py  test_cumulative_average_dist.py  test_embedding_collapse.py  test_ssim_metric.py  test_surface_distance.py
cancer-detection/tests/networks/: test_bundle_onnx_export.py  test_convert_to_onnx.py  test_varnet.py
cancer-detection/tests/profile_subclass/: README.md  profiling.py  pyspy_profiling.py
cancer-detection/tests/testing_data/: data_config.json
cancer-detection/tests/transforms/: test_adaptors.py  test_affine.py  test_affined.py  test_border_pad.py  test_border_padd.py  test_center_spatial_crop.py  test_convert_to_multi_channel.py  test_convert_to_multi_channeld.py  test_create_grid_and_affine.py  test_create_rotate_order.py  test_detect_envelope.py  test_fourier.py  test_generate_heatmap.py  test_generate_heatmapd.py  (+26 more)
(+400 files in other folders)
