[metadata]
name = monai
author = MONAI Consortium
author_email = monai.contact@gmail.com
url = https://project-monai.github.io/
description = AI Toolkit for Healthcare Imaging
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
license = Apache License 2.0
license_files =
    LICENSE
project_urls =
    Documentation=https://monai.readthedocs.io/
    Bug Tracker=https://github.com/Project-MONAI/MONAI/issues
    Source Code=https://github.com/Project-MONAI/MONAI
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
python_requires = >= 3.10
# for compiling and develop setup only
# no need to specify the versions so that we could
# compile for multiple targeted versions.
setup_requires =
    torch
    ninja
    packaging
install_requires =
    torch>=2.8.0
    numpy>=1.24,<3.0

[options.extras_require]
all =
    nibabel
    ninja
    scikit-image>=0.14.2
    scipy>=1.12.0
    pillow
    tensorboard
    gdown>=4.7.3
    pytorch-ignite==0.4.11
    torchio
    torchvision
    itk>=5.2
    tqdm>=4.47.0
    lmdb
    psutil
    cucim-cu12; platform_system == "Linux" and python_version <= '3.10'
    cucim-cu13; platform_system == "Linux" and python_version >= '3.11'
    openslide-python
    openslide-bin
    tifffile; platform_system == "Linux" or platform_system == "Darwin"
    imagecodecs; platform_system == "Linux" or platform_system == "Darwin"
    pandas
    einops
    transformers>=4.53.0
    mlflow>=2.12.2,<3.13
    clearml>=1.10.0rc0
    matplotlib>=3.6.3
    tensorboardX
    pyyaml
    fire
    jsonschema
    pynrrd
    pydicom
    h5py
    nni; platform_system == "Linux" and "arm" not in platform_machine and "aarch" not in platform_machine
    optuna
    onnx>=1.13.0
    onnxruntime
    zarr
    lpips==0.1.4
    nvidia-ml-py
    huggingface_hub
    pyamg>=5.0.0, <5.3.0
nibabel =
    nibabel
ninja =
    ninja
skimage =
    scikit-image>=0.14.2
scipy =
    scipy>=1.12.0
pillow =
    pillow!=8.3.0
tensorboard =
    tensorboard
gdown =
    gdown>=4.7.3
ignite =
    pytorch-ignite==0.4.11
torchio =
    torchio
torchvision =
    torchvision
itk =
    itk>=5.2
tqdm =
    tqdm>=4.47.0
lmdb =
    lmdb
psutil =
    psutil
cucim =
    cucim-cu12; platform_system == "Linux" and python_version <= '3.10'
    cucim-cu13; platform_system == "Linux" and python_version >= '3.11'
openslide =
    openslide-python
    openslide-bin
tifffile =
    tifffile; platform_system == "Linux" or platform_system == "Darwin"
imagecodecs =
    imagecodecs; platform_system == "Linux" or platform_system == "Darwin"
pandas =
    pandas
einops =
    einops
transformers =
    transformers>=4.36.0, <4.41.0; python_version <= '3.10'
mlflow =
    mlflow>=2.12.2,<3.13
matplotlib =
    matplotlib>=3.6.3
clearml =
    clearml
tensorboardX =
    tensorboardX
pyyaml =
    pyyaml
fire =
    fire
packaging =
    packaging
jsonschema =
    jsonschema
pynrrd =
    pynrrd
pydicom =
    pydicom
h5py =
    h5py
nni =
    nni; platform_system == "Linux" and "arm" not in platform_machine and "aarch" not in platform_machine
optuna =
    optuna
onnx =
    onnx>=1.13.0
    onnxruntime; python_version <= '3.10'
zarr =
    zarr
lpips =
    lpips==0.1.4
pynvml =
    nvidia-ml-py
polygraphy =
    polygraphy

# # workaround https://github.com/Project-MONAI/MONAI/issues/5882
# MetricsReloaded =
    # MetricsReloaded @ git+https://github.com/Project-MONAI/MetricsReloaded@monai-support#egg=MetricsReloaded
huggingface_hub =
    huggingface_hub
pyamg =
    pyamg>=5.0.0, <5.3.0
# segment-anything =
#     segment-anything @ git+https://github.com/facebookresearch/segment-anything@6fdee8f2727f4506cfbbe553e23b895e27956588#egg=segment-anything

[isort]
known_first_party = monai
profile = black
line_length = 120
skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, monai/__init__.py
skip_glob = *.pyi
add_imports = from __future__ import annotations
append_only = true

[versioneer]
VCS = git
style = pep440
versionfile_source = monai/_version.py
versionfile_build = monai/_version.py
tag_prefix =
parentdir_prefix =

[mypy]
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = True
# Changes the treatment of arguments with a default value of None by not implicitly making their type Optional.
no_implicit_optional = True
# Warns about casting an expression to its inferred type.
warn_redundant_casts = True
# No error on unneeded # type: ignore comments.
warn_unused_ignores = False
# Shows a warning when returning a value with type Any from a function declared with a non-Any return type.
warn_return_any = True
# Prohibit equality checks, identity checks, and container checks between non-overlapping types.
strict_equality = True
# Shows column numbers in error messages.
show_column_numbers = True
# Shows error codes in error messages.
show_error_codes = True
# Use visually nicer output in error messages: use soft word wrap, show source code snippets, and show error location markers.
pretty = False
# Warns about per-module sections in the config file that do not match any files processed when invoking mypy.
warn_unused_configs = True
# Make arguments prepended via Concatenate be truly positional-only.
extra_checks = True
# Allows variables to be redefined with an arbitrary type,
# as long as the redefinition is in the same block and nesting level as the original definition.
# allow_redefinition = True

exclude = venv/

[mypy-versioneer]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monai._version]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monai.eggs]
# Ignores all non-fatal errors.
ignore_errors = True

[mypy-monai.*]
# Also check the body of functions with no types in their type signature.
check_untyped_defs = True
# Warns about usage of untyped decorators.
disallow_untyped_decorators = True

[mypy-monai.visualize.*,monai.utils.*,monai.optimizers.*,monai.losses.*,monai.inferers.*,monai.config.*,monai._extensions.*,monai.fl.*,monai.engines.*,monai.handlers.*,monai.auto3dseg.*,monai.bundle.*,monai.metrics.*,monai.apps.*]
disallow_incomplete_defs = True

[coverage:run]
concurrency = multiprocessing
source = .
data_file = .coverage/.coverage
omit = setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    # Don't complain if tests don't hit code:
    raise NotImplementedError
    if __name__ == .__main__.:
show_missing = True
skip_covered = True

[coverage:xml]
output = coverage.xml
